--- a/chirp/main.html
+++ b/chirp/main.html
@@ -2,8 +2,17 @@
 <html>
   <head>
     <title>Chirp</title>
+
+    <title>Chirp</title>
+
+    <!-- adding angular.js  -->
+    <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.2.0/angular.min.js"></script>
+    <script src="javascripts/chirpApp.js"></script>
+
   </head>
-  <body>
+
+  <!-- adding angular controller -->
+  <body ng-app="chirpApp">
     <div id='main'>
       <form>
         <input type="text" placeholder="Your name" /> 
