--- a/chirp/main.html
+++ b/chirp/main.html
@@ -13,7 +13,7 @@
 
   <!-- adding angular controller -->
   <body ng-app="chirpApp">
-    <div id='main'>
+    <div id='main' ng-controller="mainController">
       <form>
         <input type="text" placeholder="Your name" /> 
         <textarea required maxlength="200" rows="3" placeholder="Say something"></textarea>
